--- a/ExchangeRates/ExchangeRates.Droid/ExchangeRates.Droid.csproj
+++ b/ExchangeRates/ExchangeRates.Droid/ExchangeRates.Droid.csproj
@@ -120,5 +120,10 @@
   <ItemGroup>
     <AndroidAsset Include="Assets\AboutAssets.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\main_list_item.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
