--- a/ExchangeRates/ExchangeRates.Droid/ExchangeRates.Droid.csproj
+++ b/ExchangeRates/ExchangeRates.Droid/ExchangeRates.Droid.csproj
@@ -116,6 +116,7 @@
   <ItemGroup>
     <Compile Include="DebugTrace.cs" />
     <Compile Include="LinkerPleaseInclude.cs" />
+    <Compile Include="Services\SQLiteAndroid.cs" />
     <Compile Include="Setup.cs" />
     <Compile Include="SplashScreen.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
