--- a/ExchangeRates/ExchangeRates.Droid/ExchangeRates.Droid.csproj
+++ b/ExchangeRates/ExchangeRates.Droid/ExchangeRates.Droid.csproj
@@ -119,6 +119,7 @@
     <Compile Include="Setup.cs" />
     <Compile Include="SplashScreen.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\BankBranchesView.cs" />
     <Compile Include="Views\DetailView.cs" />
     <Compile Include="Views\FirstView.cs" />
     <Compile Include="Views\BaseView.cs" />
@@ -134,6 +135,16 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\DetailView.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\BankBranchesView.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\bank_branches_list_item.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
